修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,18 @@ npm-debug.log
 /yii_test.bat
 /composer.lock
 /frontend/config/main-local.php
+/frontend/config/params-local.php
 /frontend/config/params.php
 /common/config/main-local.php
 /backend/config/main-local.php
+/backend/config/params-local.php
 /.bowerrc
 /backend/web/uploads
 /frontend/web/robots.txt
 /frontend/web/index.php
 /console/config/main-local.php
+/console/config/params-local.php
+/api/config/main-local.php
+/api/config/params-local.php
 yii
 package.lock
