修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ npm-debug.log
 /frontend/config/main-local.php
 /frontend/config/params-local.php
 /common/config/main-local.php
+/common/config/params-local.php
 /backend/config/main-local.php
 /backend/config/params-local.php
 /.bowerrc
