feat: #2020101501 初始化首页api请求

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@miniprogram-component-plus/vtabs": "^1.0.0",
     "weui-miniprogram": "^1.0.5"
   }
 }
